tools/sddl/assembler/tests/success/stack_dup_multiple.asm
# Test: stack.dup - duplicate multiple times
push.i32 100
stack.dup
stack.dup
halt
