tools/sddl/assembler/tests/fail/push_tag_missing_param.asm
# EXPECT-ERROR: requires 1 parameter
push.tag
halt

